# gcal_sync

./: .coveragerc  .cruft.json  .gitignore  .pre-commit-config.yaml  .pylintrc  DESIGN.md  README.md  mypy.ini  pyproject.toml  pyproject.toml.rej  pytest.ini  renovate.json  renovate.json5  requirements.txt  requirements_dev.txt  run-mypy  setup.cfg
.github/workflows/: cruft.yaml  docs.yaml  flake8.yaml  lint.yaml  mypy.yaml  pages.yaml  publish.yaml  pylint.yaml  pylint.yml  python-package.yaml  python-package.yml  python-publish.yaml  python-publish.yml  test.yaml
gcal_sync/: .api.py.swp  .timeline.py.swp  __init__.py  api.py  auth.py  const.py  event_sync.py  exceptions.py  model.py  store.py  sync.py  timeline.py  timespan.py  util.py
google_calendar_sync/: __init__.py  api.py  model.py  store.py
tests/: .test_api.py.swp  __init__.py  conftest.py  test_api.py  test_auth.py  test_event_sync.py  test_example.py  test_model.py  test_store.py  test_sync.py  test_timeline.py
