[metadata]
name = gcal-sync
version = 5.0.0
description = A python library for syncing Google Calendar to local storage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenporter/gcal_sync
author = Allen Porter
author_email = allen.porter@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.10
install_requires =
  aiohttp>=3.8.1
  pydantic>=1.9.0
  ical>=5.0.0
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[options.package_data]
gcal_sync = py.typed
