[metadata]
name = gcal_sync
version = 7.2.0
description = A python library for syncing Google Calendar to local storage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenporter/gcal_sync
author = Allen Porter
author_email = allen.porter@gmail.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    aiohttp>=3.8.1
    ical>=8.3.0
    pydantic>=2.10.4
python_requires = >=3.10
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[options.package_data]
gcal_sync = py.typed
